# Team_Work-Lambert_w_function

./: Cargo.toml  Dockerfile  README.md  ci.yml  lambert_w.rs
.github/workflows/: ci.yml
src/: input.rs  lambert_w.rs  lib.rs  main.rs
tests/: intergration_test.rs
